# Influence

./: .gitignore  CMakeLists.txt  Dockerfile  Influence.sln  README.md  build.sh  dev.sh  init.sh  run.sh
GameClient/: Game1.cs  GameClient.csproj
GameServer/: GameServer.csproj  Program.cs
GameServer/Data/: Database.cs
GameServer/Logic/: GameManager.cs
GameServer/Networking/: ClientHandler.cs  Server.cs
engine/: CmakeLists.txt
engine/src/: engine.cpp
game/: CmakeLists.txt
game/src/: main.cpp
libs/Client/: Class1.cs  Client.csproj
libs/Client/components/: TransformComponent.cs
libs/Client/systems/: Engine.cs  MovementSystem.cs  RenderSystem.cs
libs/Server/: Class1.cs  Server.csproj
libs/Shared/: Entity.cs
libs/Shared/models/: Player.cs
ui/: CMakeLists.txt
ui/src/: ui.cpp
ui/src/components/: button.ui.cpp  form.ui.cpp  table.ui.cpp  window.ui.cpp
